# core

./: .gitignore  CLAUDE.md  DISCUSSION_POINTS.md  FEEDBACK_GUIDE.md  FINAL_SUCCESS_GOAL.md  FORM_AUTOMATION_README.md  PHASE_STATUS.md  PROJECT_STATUS.md  REAL_URL_TESTING_GUIDE.md  TESTING_QUICKSTART.md  dashboard.py  phases.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_form_tests.py  test_form_detection.py  test_profiling_real_urls.py  test_with_real_email.py
alembic/: env.py
alembic/versions/: 45a7aa2cfa19_create_initial_tables.py
api/: main.py  schemas.py
api/routes/: automation.py  connectors.py  jobs.py
api/templates/: dashboard.html
automation/: __init__.py  models.py  profiling.py
automation/form_filler/: __init__.py  detector.py  filler.py
connectors/: __init__.py  base.py  bundesagentur.py  nursing_forms.py  remoteok.py  remotive.py  schemas.py
core/: __init__.py  config.py  database.py
core/models/: __init__.py  application.py  base.py  company.py  job.py  skill.py
docs/: MILESTONE_1_API_INTERFACE.md
phase-plans/: plan-phase1.md
tests/: __init__.py  conftest.py
tests/connectors/: test_bundesagentur.py
